# buffer

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  README.md
cmake/: textbuffer-config.cmake.in
examples/: CMakeLists.txt  comprehensive_test.cpp  custom_test.cpp  large_file_test.cpp  simple_buffer_test.cpp  simple_performance_test.cpp  simplest_buffer_test.cpp  textbuffer_benchmark.cpp  textbuffer_insert_delete_test.cpp  textbuffer_robustness_test.cpp  textbuffer_test.cpp
include/textbuffer/: piece_tree_base.h  piece_tree_builder.h  piece_tree_snapshot.h  rb_tree_base.h  textbuffer.h  unicode.h
include/textbuffer/common/: char_code.h  position.h  range.h
src/: CMakeLists.txt  line_starts.cpp  piece_tree_base.cpp  piece_tree_builder.cpp  piece_tree_snapshot.cpp  rb_tree_base.cpp  textbuffer.cpp  unicode.cpp
tests/: CMakeLists.txt
